--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -5,6 +5,9 @@
   "button.cancel": {
     "defaultMessage": "Cancel"
   },
+  "button.close": {
+    "defaultMessage": "Close"
+  },
   "button.continue": {
     "defaultMessage": "Continue"
   },
