--- a/apps/frontend/src/locales/en-US/languages.json
+++ b/apps/frontend/src/locales/en-US/languages.json
@@ -1,58 +1,50 @@
 {
-	"ar": "Arabic",
-	"be": "Belarusian",
-	"bg": "Bulgarian",
-	"bn": "Bangla",
-	"ca": "Catalan",
-	"cs": "Czech",
-	"da": "Danish",
-	"de": "German",
-	"de-CH": "German (Switzerland)",
-	"el": "Greek",
-	"en-GB": "English (United Kingdom)",
-	"en-US": "English (United States)",
-	"en-x-lolcat": "LOLCAT",
-	"en-x-pirate": "English (Pirate)",
-	"en-x-updown": "English (Upside down)",
-	"en-x-uwu": "English (UwU)",
-	"eo": "Esperanto",
-	"es": "Spanish",
-	"et": "Estonian",
-	"fi": "Finnish",
-	"fr": "French",
-	"fr-BE": "French (Belgium)",
-	"fr-CA": "French (Canada)",
-	"he": "Hebrew",
-	"hi": "Hindi",
-	"hr": "Croatian",
-	"hu": "Hungarian",
-	"id": "Indonesian",
-	"it": "Italian",
-	"ja": "Japanese",
-	"kk": "Kazakh",
-	"ko": "Korean",
-	"ky": "Kyrgyz",
-	"lt": "Lithuanian",
-	"lv": "Latvian",
-	"ms": "Malay",
-	"nb": "Norwegian Bokmål",
-	"nl": "Dutch",
-	"nn": "Norwegian Nynorsk",
-	"pes": "Persian",
-	"pl": "Polish",
-	"pt": "Portuguese",
-	"pt-BR": "Portuguese (Brazil)",
-	"ro": "Romanian",
-	"ru": "Russian",
-	"ru-x-bandit": "Russian (Bandit)",
-	"sk": "Slovak",
-	"sv": "Swedish",
-	"th": "Thai",
-	"tok": "Toki Pona",
-	"tr": "Turkish",
-	"tt": "Tatar",
-	"uk": "Ukrainian",
-	"vi": "Vietnamese",
-	"zh-Hans": "Chinese (Simplified)",
-	"zh-Hant": "Chinese (Traditional)"
+	"zh-TW": "Chinese Traditional",
+	"zh-CN": "Chinese Simplified",
+	"vi-VN": "Vietnamese",
+	"uk-UA": "Ukrainian",
+	"tt-RU": "Tatar",
+	"tr-TR": "Turkish",
+	"tl-PH": "Filipino",
+	"th-TH": "Thai",
+	"sv-SE": "Swedish",
+	"sr-CS": "Serbian",
+	"ru-RU": "Russian",
+	"ro-RO": "Romanian",
+	"pt-PT": "Portuguese",
+	"pt-BR": "Portuguese, Brazilian",
+	"pl-PL": "Polish",
+	"no-NO": "Norwegian",
+	"nl-NL": "Dutch",
+	"ms-MY": "Malay",
+	"ms-Arab": "Malay, Arabic",
+	"lv-LV": "Latvian",
+	"ko-KR": "Korean",
+	"ja-JP": "Japanese",
+	"it-IT": "Italian",
+	"is-IS": "Icelandic",
+	"id-ID": "Indonesian",
+	"hu-HU": "Hungarian",
+	"hr-HR": "Croatian",
+	"he-IL": "Hebrew",
+	"fr-FR": "French",
+	"fil-PH": "Filipino",
+	"fi-FI": "Finnish",
+	"fa-IR": "Persian",
+	"et-EE": "Estonian",
+	"es-ES": "Spanish",
+	"es-419": "Spanish, Latin America",
+	"eo-UY": "Esperanto",
+	"en-US": "English, United States",
+	"el-GR": "Greek",
+	"de-DE": "German",
+	"de-CH": "German, Switzerland",
+	"da-DK": "Danish",
+	"cs-CZ": "Czech",
+	"ceb-PH": "Cebuano",
+	"ca-ES": "Catalan",
+	"be-BY": "Belarusian",
+	"az-AZ": "Azerbaijani",
+	"ar-SA": "Arabic, Saudi Arabia",
+	"af-ZA": "Afrikaans"
 }
