--- a/apps/app-frontend/src/locales/en-US/index.json
+++ b/apps/app-frontend/src/locales/en-US/index.json
@@ -2,6 +2,9 @@
   "app.settings.developer-mode-enabled": {
     "message": "Developer mode enabled."
   },
+  "app.settings.downloading": {
+    "message": "Downloading v{version}"
+  },
   "app.settings.tabs.appearance": {
     "message": "Appearance"
   },
@@ -19,6 +22,48 @@
   },
   "app.settings.tabs.resource-management": {
     "message": "Resource management"
+  },
+  "app.update-toast.body": {
+    "message": "Modrinth App v{version} is ready to install! Reload to update now, or automatically when you close Modrinth App."
+  },
+  "app.update-toast.body.download-complete": {
+    "message": "Modrinth App v{version} has finished downloading. Reload to update now, or automatically when you close Modrinth App."
+  },
+  "app.update-toast.body.metered": {
+    "message": "Modrinth App v{version} is available now! Since you're on a metered network, we didn't automatically download it."
+  },
+  "app.update-toast.changelog": {
+    "message": "Changelog"
+  },
+  "app.update-toast.download": {
+    "message": "Download ({size})"
+  },
+  "app.update-toast.downloading": {
+    "message": "Downloading..."
+  },
+  "app.update-toast.reload": {
+    "message": "Reload"
+  },
+  "app.update-toast.title": {
+    "message": "Update available"
+  },
+  "app.update-toast.title.download-complete": {
+    "message": "Download complete"
+  },
+  "app.update.complete-toast.text": {
+    "message": "Click here to view the changelog."
+  },
+  "app.update.complete-toast.title": {
+    "message": "Version {version} was successfully installed!"
+  },
+  "app.update.download-update": {
+    "message": "Download update"
+  },
+  "app.update.downloading-update": {
+    "message": "Downloading update ({percent}%)"
+  },
+  "app.update.reload-to-update": {
+    "message": "Reload to install update"
   },
   "instance.add-server.add-and-play": {
     "message": "Add and play"
