--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -626,6 +626,12 @@
   "error.generic.404.title": {
     "message": "Page not found"
   },
+  "error.generic.451.subtitle": {
+    "message": "This page has been blocked for legal reasons, such as government censorship or ongoing legal proceedings."
+  },
+  "error.generic.451.title": {
+    "message": "Content unavailable for legal reasons"
+  },
   "error.generic.default.list_item.1": {
     "message": "Check if Modrinth is down on our <status-link>Status page</status-link>."
   },
