--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -17,6 +17,9 @@
   "button.cancel": {
     "defaultMessage": "Cancel"
   },
+  "button.clear": {
+    "defaultMessage": "Clear"
+  },
   "button.close": {
     "defaultMessage": "Close"
   },
