--- a/apps/app-frontend/src/locales/en-US/index.json
+++ b/apps/app-frontend/src/locales/en-US/index.json
@@ -69,7 +69,7 @@
     "message": "Add a friend"
   },
   "friends.action.view-friend-requests": {
-    "message": "{count} friend requests"
+    "message": "{count} friend {count, plural, one {request} other {requests}}"
   },
   "friends.add-friend.submit": {
     "message": "Send friend request"
